pagina index terminada

--- a/html/index.html
+++ b/html/index.html
@@ -10,7 +10,7 @@
 <body>
     <header class="xlc-container xlc-header">
         <div class="xlc-grid">
-            <a class="xlc-header-logo" href="#" ><img src="../img/logo_blanco.png" alt="" /></a>
+            <a class="xlc-header-logo" href="#" ><img src="../img/logo.png" alt="" /></a>
             <ul class="xlc-header-menu1">
                 <li><a href="">Inicio</a></li>
                 <li><a href="">Nosotros</a></li>
@@ -25,7 +25,7 @@
         </div>
     </header>
 
-    <div class="xlc-container xlc-section-vp xlc-init-section">
+    <div class="xlc-container xlc-section-vp xlc-init-section xlc-multiply-background">
         <div class="xlc-grid">
             <h1 class="xlc-title">Queremos un mundo donde los humanos seamos una especie en equilibrio con el medio.</h1>
             <p class="xlc-subtitle">Implicamos a toda la sociedad en la conservación de la mar, y especialmente, de sus animales más emblemáticos (delfines, tortugas marinas, caballitos de mar…) y los hábitats locales, a través de campañas de comunicación con rigor científico dirigidas a la acción y actividades inclusivas y útiles.</p>
@@ -33,7 +33,7 @@
         </div>
     </div>
 
-    <div class="xlc-container xlc-section-vp xlc-nosotros-section">
+    <div class="xlc-container xlc-section-vp xlc-nosotros-section xlc-color-background">
         <div class="xlc-grid">
             <h2 class="xlc-title">Xaloc, estudio y conservación del entorno</h2>
             <div class="xlc-enum-card">
@@ -89,91 +89,91 @@
                 <h3 class="xlc-project-title">Campamento Tortuga</h3>
                 <p class="xlc-project-description">En los últimos 20 años las tortugas bobas (Caretta caretta) están eligiendo las costas del mediterráneo español como zona de nidificación.</p>
                 <div class="xlc-project-img">
-                    <img src="../img/index/proyectos/campamento4.png" alt="">
+                    <img src="../img/proyectos/campamento4.png" alt="">
                 </div>
             </div>
             <div class="xlc-project">
                 <h3 class="xlc-project-title">Campamento Tortuga</h3>
                 <p class="xlc-project-description">En los últimos 20 años las tortugas bobas (Caretta caretta) están eligiendo las costas del mediterráneo español como zona de nidificación.</p>
                 <div class="xlc-project-img">
-                    <img src="../img/index/proyectos/limpieza-playas-2.png" alt="">
+                    <img src="../img/proyectos/limpieza-playas-2.png" alt="">
                 </div>
             </div>
             <div class="xlc-project">
                 <h3 class="xlc-project-title">Campamento Tortuga</h3>
                 <p class="xlc-project-description">En los últimos 20 años las tortugas bobas (Caretta caretta) están eligiendo las costas del mediterráneo español como zona de nidificación.</p>
                 <div class="xlc-project-img">
-                    <img src="../img/index/proyectos/cabecera-plantas.png" alt="">
+                    <img src="../img/proyectos/cabecera-plantas.png" alt="">
                 </div>
             </div>
             <div class="xlc-project">
                 <h3 class="xlc-project-title">Campamento Tortuga</h3>
                 <p class="xlc-project-description">En los últimos 20 años las tortugas bobas (Caretta caretta) están eligiendo las costas del mediterráneo español como zona de nidificación.</p>
                 <div class="xlc-project-img">
-                    <img src="../img/index/proyectos/erizo-1.png" alt="">
+                    <img src="../img/proyectos/erizo-1.png" alt="">
                 </div>
             </div>
             <div class="xlc-project">
                 <h3 class="xlc-project-title">Campamento Tortuga</h3>
                 <p class="xlc-project-description">En los últimos 20 años las tortugas bobas (Caretta caretta) están eligiendo las costas del mediterráneo español como zona de nidificación.</p>
                 <div class="xlc-project-img">
-                    <img src="../img/index/proyectos/alerta4-1.png" alt="">
+                    <img src="../img/proyectos/alerta4-1.png" alt="">
                 </div>
             </div>
             <div class="xlc-project">
                 <h3 class="xlc-project-title">Campamento Tortuga</h3>
                 <p class="xlc-project-description">En los últimos 20 años las tortugas bobas (Caretta caretta) están eligiendo las costas del mediterráneo español como zona de nidificación.</p>
                 <div class="xlc-project-img">
-                    <img src="../img/index/proyectos/texto-micro.png" alt="">
+                    <img src="../img/proyectos/texto-micro.png" alt="">
                 </div>
             </div>
             <div class="xlc-project">
                 <h3 class="xlc-project-title">Campamento Tortuga</h3>
                 <p class="xlc-project-description">En los últimos 20 años las tortugas bobas (Caretta caretta) están eligiendo las costas del mediterráneo español como zona de nidificación.</p>
                 <div class="xlc-project-img">
-                    <img src="../img/index/proyectos/playa.png" alt="">
+                    <img src="../img/proyectos/playa.png" alt="">
                 </div>
             </div>
             <div class="xlc-project">
                 <h3 class="xlc-project-title">Campamento Tortuga</h3>
                 <p class="xlc-project-description">En los últimos 20 años las tortugas bobas (Caretta caretta) están eligiendo las costas del mediterráneo español como zona de nidificación.</p>
                 <div class="xlc-project-img">
-                    <img src="../img/index/proyectos/campamento9.png" alt="">
+                    <img src="../img/proyectos/campamento9.png" alt="">
                 </div>
             </div>
             <div class="xlc-project">
                 <h3 class="xlc-project-title">Campamento Tortuga</h3>
                 <p class="xlc-project-description">En los últimos 20 años las tortugas bobas (Caretta caretta) están eligiendo las costas del mediterráneo español como zona de nidificación.</p>
                 <div class="xlc-project-img">
-                    <img src="../img/index/proyectos/Temperatura.png" alt="">
+                    <img src="../img/proyectos/Temperatura.png" alt="">
                 </div>
             </div>
             <div class="xlc-project">
                 <h3 class="xlc-project-title">Campamento Tortuga</h3>
                 <p class="xlc-project-description">En los últimos 20 años las tortugas bobas (Caretta caretta) están eligiendo las costas del mediterráneo español como zona de nidificación.</p>
                 <div class="xlc-project-img">
-                    <img src="../img/index/proyectos/cabecera-palitos.png" alt="">
+                    <img src="../img/proyectos/cabecera-palitos.png" alt="">
                 </div>
             </div>
             <div class="xlc-project">
                 <h3 class="xlc-project-title">Campamento Tortuga</h3>
                 <p class="xlc-project-description">En los últimos 20 años las tortugas bobas (Caretta caretta) están eligiendo las costas del mediterráneo español como zona de nidificación.</p>
                 <div class="xlc-project-img">
-                    <img src="../img/index/proyectos/palitos3.png" alt="">
+                    <img src="../img/proyectos/palitos3.png" alt="">
                 </div>
             </div>
             <div class="xlc-project">
                 <h3 class="xlc-project-title">Campamento Tortuga</h3>
                 <p class="xlc-project-description">En los últimos 20 años las tortugas bobas (Caretta caretta) están eligiendo las costas del mediterráneo español como zona de nidificación.</p>
                 <div class="xlc-project-img">
-                    <img src="../img/index/campamento4.png" alt="">
+                    <img src="../img/proyectos/campamento4.png" alt="">
                 </div>
             </div>
             <div class="xlc-all-project">
                 <h3 class="xlc-project-title">Todos los proyectos</h3>
                 <p class="xlc-project-description">En los últimos 20 años las tortugas bobas (Caretta caretta) están eligiendo las costas del mediterráneo español como zona de nidificación.</p>
                 <div class="xlc-project-img">
-                    <img src="../img/index/limpieza1.png" alt="">
+                    <img src="../img/proyectos/limpieza1.png" alt="">
                 </div>
             </div>
             
@@ -186,46 +186,49 @@
         </div>
         <div class="xlc-marcas-list">
             <div class="xlc-marca">
-                <img src="../img/index/marcas/Grupo 48.png" alt="">
+                <img src="../img/marcas/Grupo 48.png" alt="">
             </div>
             <div class="xlc-marca">
-                <img src="../img/index/marcas/Grupo 49.png" alt="">
+                <img src="../img/marcas/Grupo 49.png" alt="">
             </div>
             <div class="xlc-marca">
-                <img src="../img/index/marcas/Grupo 368.png" alt="">
+                <img src="../img/marcas/Grupo 368.png" alt="">
             </div>
             <div class="xlc-marca">
-                <img src="../img/index/marcas/Grupo 72.png" alt="">
+                <img src="../img/marcas/Grupo 72.png" alt="">
             </div>
             <div class="xlc-marca">
-                <img src="../img/index/marcas/Grupo 107.png" alt="">
+                <img src="../img/marcas/Grupo 107.png" alt="">
             </div>
             <div class="xlc-marca">
-                <img src="../img/index/marcas/Grupo 118.png" alt="">
+                <img src="../img/marcas/Grupo 118.png" alt="">
             </div>
             <div class="xlc-marca">
-                <img src="../img/index/marcas/Grupo 165.png" alt="">
+                <img src="../img/marcas/Grupo 165.png" alt="">
             </div>
             <div class="xlc-marca">
-                <img src="../img/index/marcas/Grupo 166.png" alt="">
+                <img src="../img/marcas/Grupo 166.png" alt="">
             </div>
             <div class="xlc-marca">
-                <img src="../img/index/marcas/Grupo 331.png" alt="">
+                <img src="../img/marcas/Grupo 331.png" alt="">
             </div>
             <div class="xlc-marca">
-                <img src="../img/index/marcas/Grupo 332.png" alt="">
+                <img src="../img/marcas/Grupo 332.png" alt="">
             </div>
             <div class="xlc-marca">
-                <img src="../img/index/marcas/Grupo 349.png" alt="">
+                <img src="../img/marcas/Grupo 349.png" alt="">
             </div>
             <div class="xlc-marca">
-                <img src="../img/index/marcas/Grupo 350.png" alt="">
+                <img src="../img/marcas/Grupo 350.png" alt="">
+            </div>
+            <div class="xlc-marca">
+                <img src="../img/marcas/Grupo 350.png" alt="">
             </div>
         </div>
     </div>
 
     <footer class="xlc-container xlc-footer">
-        <div class="xlc-grid xlc-footer-section">
+        <div class="xlc-grid xlc-footer-dona">
             <h2 class="xlc-title">¡Dona!</h2>
             <p class="xlc-subtitle">Con tu donación nos ayudas a seguir realizando proyectos propios para concienciar al mayor número de personas sobre los problemas medioambientales y avanzar en la conservación del entorno marino. </p>
             <a class="xlc-orange-btn" href="">QUIERO AYUDAR</a>
@@ -236,28 +239,31 @@
                 <li><a href="">Nosotros</a></li>
                 <li><a href="">Proyectos</a></li>
                 <li><a href="">Contacto</a></li>
-                <li><a href="">Colabora</a></li>
-                <li><a href="">Dona</a></li>
+                <li class="xlc-footer-menu2"><a href="">Colabora</a></li>
+                <li class="xlc-footer-menu2"><a href="">Dona</a></li>
             </ul>
-            <p class="xlc-legal-info">Envíos y devoluciones<br/>
-                Aviso legal y política de privacidad<br/>
-                Política de cookies</p>
+            <ul class="xlc-legal-info">
+                <li><a href="">Envíos y devoluciones</a></li>
+                <li><a href="">Aviso legal y política de privacidad</a></li>
+                <li><a href="">Política de cookies</a></li>
+            </ul>
             <div class="xlc-newsletter"></div>
             <a href="" class="xlc-footer-logo">
-                <img src="" alt="">
+                <img src="../img/logo.png" alt="">
             </a>
-            <p class="xlc-ubi-info">Asociación para el estudio <br/>
-                y conservación del mar<br/>
+            <p class="xlc-ubi-info">
+                <b>Asociación para el estudio <br/>
+                y conservación del mar</b><br/><br/>
                 Calle de la Democracia, 31 puerta 12<br/>
                 46018 Valencia – España<br/>
-                CIF: G98261266<br/>
+                CIF: G98261266<br/><br/>
                 +34 960 226 499<br/>
                 xaloc@hermanosdesal.org</p>
             <div class="xlc-rrss">
-                <img src="" alt="">
-                <img src="" alt="">
-                <img src="" alt="">
-                <img src="" alt="">
+                <a href=""><img src="../img/index/rrss/logo-facebook.svg" alt=""></a>
+                <a href=""><img src="../img/index/rrss/logo-instagram.svg" alt=""></a>
+                <a href=""><img src="../img/index/rrss/logo-youtube.svg" alt=""></a>
+                <a href=""><img src="../img/index/rrss/logo-linkedin.svg" alt=""></a>
             </div>
             <span class="xlc-copyright">Copyright ©2020 Xaloc. Todos los derechos reservados.</span>
         </div>
