pequeño problema con el padding bot solucionado

--- a/html/index.html
+++ b/html/index.html
@@ -260,10 +260,10 @@
                 +34 960 226 499<br/>
                 xaloc@hermanosdesal.org</p>
             <div class="xlc-rrss">
-                <a href=""><img src="../img/index/rrss/logo-facebook.svg" alt=""></a>
-                <a href=""><img src="../img/index/rrss/logo-instagram.svg" alt=""></a>
-                <a href=""><img src="../img/index/rrss/logo-youtube.svg" alt=""></a>
-                <a href=""><img src="../img/index/rrss/logo-linkedin.svg" alt=""></a>
+                <a href=""><img src="../img/rrss/logo-facebook.svg" alt=""></a>
+                <a href=""><img src="../img/rrss/logo-instagram.svg" alt=""></a>
+                <a href=""><img src="../img/rrss/logo-youtube.svg" alt=""></a>
+                <a href=""><img src="../img/rrss/logo-linkedin.svg" alt=""></a>
             </div>
             <span class="xlc-copyright">Copyright ©2020 Xaloc. Todos los derechos reservados.</span>
         </div>
