header y footer php terminados

--- a/assets/html/index.html
+++ b/assets/html/index.html
@@ -260,8 +260,8 @@
                 Calle de la Democracia, 31 puerta 12<br/>
                 46018 Valencia – España<br/>
                 CIF: G98261266<br/><br/>
-                +34 960 226 499<br/>
-                xaloc@hermanosdesal.org</p>
+                <a href="tel:+34960226499">+34 960 226 499</a><br/>
+                <a href="email:xaloc@hermanosdesal.org">xaloc@hermanosdesal.org</a></p>
             <div class="xlc-rrss">
                 <a href=""><img src="../img/rrss/logo-facebook.svg" alt=""></a>
                 <a href=""><img src="../img/rrss/logo-instagram.svg" alt=""></a>
