--- a/assets/html/index.html
+++ b/assets/html/index.html
@@ -25,6 +25,10 @@
                 <img src="../icon/carrito.svg" alt="">
                 <span>Carrito</span>
             </a>
+            <img class="xlc-open-menu-btn" onclick="OpenMenu(this)" src="../icon/abrir-menu.svg" alt="">
+        </div>
+        <div class="xlc-menu-responsive">
+            <img class="xlc-close-menu-btn" onclick="CloseMenu(this)" src="../icon/cerrar-menu.svg" alt="">
         </div>
     </header>
 
